// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`default world > per-island numbers 1`] = `
[
  {
    "dolPolicy": "Skilled Labor Act",
    "hacienda": [
      false,
      false,
      false,
      false,
      false,
      false,
    ],
    "hasDol": [
      true,
      true,
      true,
      true,
      true,
      true,
    ],
    "island": "Crown Falls",
    "producedGoods": [
      "Bread",
      "Flour",
      "Beer",
      "Malt",
      "Coffee",
      "Fur Coats",
    ],
  },
  {
    "dolPolicy": "Land Reform Act",
    "hacienda": [
      false,
      false,
      false,
    ],
    "hasDol": [
      true,
      true,
      true,
    ],
    "island": "Farm Island",
    "producedGoods": [
      "Grain",
      "Hops",
      "Furs",
    ],
  },
  {
    "dolPolicy": "None",
    "hacienda": [
      false,
      false,
    ],
    "hasDol": [
      false,
      false,
    ],
    "island": "Plantation Island",
    "producedGoods": [
      "Cotton",
      "Cotton Fabric",
    ],
  },
]
`;

exports[`default world > per-line numbers 1`] = `
[
  {
    "building": "Bakery",
    "constituents": [
      "Base Productivity: 1",
      "Electricity: 1",
      "Palace Trade Union Bonus: 0.3",
    ],
    "consumedPerMin": 23,
    "efficiency": 2.3,
    "extraGoods": [],
    "good": "Bread",
    "island": "Crown Falls",
    "numBuildings": 10,
    "processTimeSeconds": 26.086957,
    "producedPerMin": 23,
    "producedPerMinWithExtras": 23,
  },
  {
    "building": "Flour Mill",
    "constituents": [
      "Base Productivity: 1",
      "Electricity: 1",
      "Palace Trade Union Bonus: 0.3",
    ],
    "consumedPerMin": 23,
    "efficiency": 2.3,
    "extraGoods": [],
    "good": "Flour",
    "island": "Crown Falls",
    "numBuildings": 5,
    "processTimeSeconds": 13.043478,
    "producedPerMin": 23,
    "producedPerMinWithExtras": 23,
  },
  {
    "building": "Brewery",
    "constituents": [
      "Base Productivity: 1",
      "Electricity: 1",
      "Palace Trade Union Bonus: 0.3",
    ],
    "consumedPerMin": 9.2,
    "efficiency": 2.3,
    "extraGoods": [],
    "good": "Beer",
    "island": "Crown Falls",
    "numBuildings": 4,
    "processTimeSeconds": 26.086957,
    "producedPerMin": 9.2,
    "producedPerMinWithExtras": 9.2,
  },
  {
    "building": "Malthouse",
    "constituents": [
      "Base Productivity: 1",
      "Electricity: 1",
      "Palace Trade Union Bonus: 0.3",
    ],
    "consumedPerMin": 13.8,
    "efficiency": 2.3,
    "extraGoods": [],
    "good": "Malt",
    "island": "Crown Falls",
    "numBuildings": 3,
    "processTimeSeconds": 13.043478,
    "producedPerMin": 13.8,
    "producedPerMinWithExtras": 13.8,
  },
  {
    "building": "Advanced Coffee Roaster",
    "constituents": [
      "Base Productivity: 1",
      "Electricity: 1",
      "Palace Trade Union Bonus: 0.3",
    ],
    "consumedPerMin": 4.6,
    "efficiency": 2.3,
    "extraGoods": [],
    "good": "Coffee",
    "island": "Crown Falls",
    "numBuildings": 2,
    "processTimeSeconds": 26.086957,
    "producedPerMin": 4.6,
    "producedPerMinWithExtras": 4.6,
  },
  {
    "building": "Fur Dealer",
    "constituents": [
      "Base Productivity: 1",
      "Electricity: 1",
      "Palace Trade Union Bonus: 0.3",
    ],
    "consumedPerMin": 9.2,
    "efficiency": 2.3,
    "extraGoods": [],
    "good": "Fur Coats",
    "island": "Crown Falls",
    "numBuildings": 2,
    "processTimeSeconds": 13.043478,
    "producedPerMin": 9.2,
    "producedPerMinWithExtras": 9.2,
  },
  {
    "building": "Grain Farm",
    "constituents": [
      "Base Productivity: 1",
      "Tractor Barn: 2",
      "Palace Trade Union Bonus: 0.3",
    ],
    "consumedPerMin": 26.4,
    "efficiency": 3.3,
    "extraGoods": [
      "Grain <- Land Reform Act: 13.2/min",
      "Grain <- Tractor Barn: 8.8/min",
    ],
    "good": "Grain",
    "island": "Farm Island",
    "numBuildings": 8,
    "processTimeSeconds": 18.181818,
    "producedPerMin": 26.4,
    "producedPerMinWithExtras": 48.4,
  },
  {
    "building": "Hop Farm",
    "constituents": [
      "Base Productivity: 1",
      "Tractor Barn: 2",
      "Palace Trade Union Bonus: 0.3",
    ],
    "consumedPerMin": 6.6,
    "efficiency": 3.3,
    "extraGoods": [
      "Hops <- Land Reform Act: 3.3/min",
      "Hops <- Tractor Barn: 2.2/min",
    ],
    "good": "Hops",
    "island": "Farm Island",
    "numBuildings": 3,
    "processTimeSeconds": 27.272727,
    "producedPerMin": 6.6,
    "producedPerMinWithExtras": 12.1,
  },
  {
    "building": "Hunting Cabin",
    "constituents": [
      "Base Productivity: 1",
    ],
    "consumedPerMin": 10,
    "efficiency": 1,
    "extraGoods": [],
    "good": "Furs",
    "island": "Farm Island",
    "numBuildings": 10,
    "processTimeSeconds": 60,
    "producedPerMin": 10,
    "producedPerMinWithExtras": 10,
  },
  {
    "building": "Cotton Plantation",
    "constituents": [
      "Base Productivity: 1",
    ],
    "consumedPerMin": 10,
    "efficiency": 1,
    "extraGoods": [],
    "good": "Cotton",
    "island": "Plantation Island",
    "numBuildings": 10,
    "processTimeSeconds": 60,
    "producedPerMin": 10,
    "producedPerMinWithExtras": 10,
  },
  {
    "building": "Cotton Mill",
    "constituents": [
      "Base Productivity: 1",
    ],
    "consumedPerMin": 10,
    "efficiency": 1,
    "extraGoods": [],
    "good": "Cotton Fabric",
    "island": "Plantation Island",
    "numBuildings": 5,
    "processTimeSeconds": 30,
    "producedPerMin": 10,
    "producedPerMinWithExtras": 10,
  },
]
`;

exports[`feature world > per-island numbers 1`] = `
[
  {
    "dolPolicy": "Skilled Labor Act",
    "hacienda": [
      false,
      false,
      false,
      false,
      false,
      false,
    ],
    "hasDol": [
      true,
      true,
      true,
      true,
      true,
      true,
    ],
    "island": "Old Isle",
    "producedGoods": [
      "Steel Beams",
      "Pigs",
      "Grain",
      "Potatoes",
      "Bread",
      "Chocolate",
      "Furs",
      "Flour",
    ],
  },
  {
    "dolPolicy": "Land Reform Act",
    "hacienda": [
      false,
    ],
    "hasDol": [
      true,
    ],
    "island": "Land Reform Isle",
    "producedGoods": [
      "Grain",
    ],
  },
  {
    "dolPolicy": "Galvanic Grants Act",
    "hacienda": [
      false,
    ],
    "hasDol": [
      true,
    ],
    "island": "Galvanic Isle",
    "producedGoods": [
      "Bread",
    ],
  },
  {
    "dolPolicy": "None",
    "hacienda": [
      false,
      true,
    ],
    "hasDol": [
      false,
      false,
    ],
    "island": "New Isle",
    "producedGoods": [
      "Beef",
      "Cotton",
    ],
  },
]
`;

exports[`feature world > per-line numbers 1`] = `
[
  {
    "building": "Steelworks",
    "constituents": [
      "Base Productivity: 1",
      "Electricity: 1",
      "Palace Trade Union Bonus: 0.3",
    ],
    "consumedPerMin": 6.133333,
    "efficiency": 2.3,
    "extraGoods": [
      "Steel Beams <- Skilled Labor Act: 2.044444/min",
    ],
    "good": "Steel Beams",
    "island": "Old Isle",
    "numBuildings": 2,
    "processTimeSeconds": 19.565217,
    "producedPerMin": 6.133333,
    "producedPerMinWithExtras": 8.177778,
  },
  {
    "building": "Pig Farm",
    "constituents": [
      "Base Productivity: 1",
      "Silo: 1",
    ],
    "consumedPerMin": 8,
    "efficiency": 2,
    "extraGoods": [
      "Pigs <- Silo: 2.666667/min",
    ],
    "good": "Pigs",
    "island": "Old Isle",
    "numBuildings": 4,
    "processTimeSeconds": 30,
    "producedPerMin": 8,
    "producedPerMinWithExtras": 10.666667,
  },
  {
    "building": "Grain Farm",
    "constituents": [
      "Base Productivity: 1",
      "Tractor Barn: 2",
      "Fertilizer: 1",
      "Palace Trade Union Bonus: 0.3",
      "Alexander Hancock: 0.8",
    ],
    "consumedPerMin": 15.3,
    "efficiency": 5.1,
    "extraGoods": [
      "Grain <- Tractor Barn: 5.1/min",
      "Grain <- Fertilizer: 5.1/min",
      "Potatoes <- Alexander Hancock: 1.9125/min",
    ],
    "good": "Grain",
    "island": "Old Isle",
    "numBuildings": 3,
    "processTimeSeconds": 11.764706,
    "producedPerMin": 15.3,
    "producedPerMinWithExtras": 25.5,
  },
  {
    "building": "Bakery",
    "constituents": [
      "Base Productivity: 1",
      "Fine Cake Decorator: 0.3",
    ],
    "consumedPerMin": 2.6,
    "efficiency": 1.3,
    "extraGoods": [
      "Chocolate <- Fine Cake Decorator: 0.52/min",
    ],
    "good": "Bread",
    "island": "Old Isle",
    "numBuildings": 2,
    "processTimeSeconds": 46.153846,
    "producedPerMin": 2.6,
    "producedPerMinWithExtras": 2.6,
  },
  {
    "building": "Hunting Cabin",
    "constituents": [
      "Base Productivity: 1",
      "Bronze Age: 0.05",
    ],
    "consumedPerMin": 2.1,
    "efficiency": 1.05,
    "extraGoods": [
      "Furs <- Bronze Age: 0.21/min",
    ],
    "good": "Furs",
    "island": "Old Isle",
    "numBuildings": 2,
    "processTimeSeconds": 57.142857,
    "producedPerMin": 2.1,
    "producedPerMinWithExtras": 2.31,
  },
  {
    "building": "Flour Mill",
    "constituents": [
      "Base Productivity: 1",
    ],
    "consumedPerMin": 6,
    "efficiency": 1,
    "extraGoods": [],
    "good": "Flour",
    "island": "Old Isle",
    "numBuildings": 3,
    "processTimeSeconds": 30,
    "producedPerMin": 6,
    "producedPerMinWithExtras": 6,
  },
  {
    "building": "Grain Farm",
    "constituents": [
      "Base Productivity: 1",
      "Palace Trade Union Bonus: 0.3",
    ],
    "consumedPerMin": 6.5,
    "efficiency": 1.3,
    "extraGoods": [
      "Grain <- Land Reform Act: 3.25/min",
    ],
    "good": "Grain",
    "island": "Land Reform Isle",
    "numBuildings": 5,
    "processTimeSeconds": 46.153846,
    "producedPerMin": 6.5,
    "producedPerMinWithExtras": 9.75,
  },
  {
    "building": "Bakery",
    "constituents": [
      "Base Productivity: 1",
      "Electricity: 1",
      "Galvanic Grants Act: 0.5",
    ],
    "consumedPerMin": 2.5,
    "efficiency": 2.5,
    "extraGoods": [],
    "good": "Bread",
    "island": "Galvanic Isle",
    "numBuildings": 1,
    "processTimeSeconds": 24,
    "producedPerMin": 2.5,
    "producedPerMinWithExtras": 2.5,
  },
  {
    "building": "Cattle Farm (New World)",
    "constituents": [
      "Base Productivity: 1",
      "Silo: 1",
    ],
    "consumedPerMin": 4,
    "efficiency": 2,
    "extraGoods": [
      "Milk <- Electricity: 12/min",
      "Beef <- Silo: 1.333333/min",
    ],
    "good": "Beef",
    "island": "New Isle",
    "numBuildings": 2,
    "processTimeSeconds": 30,
    "producedPerMin": 4,
    "producedPerMinWithExtras": 5.333333,
  },
  {
    "building": "Cotton Plantation",
    "constituents": [
      "Base Productivity: 1",
      "Fertilizer: 1",
    ],
    "consumedPerMin": 4,
    "efficiency": 2,
    "extraGoods": [
      "Dung <- Hacienda Fertilizer Works: 1.333333/min",
      "Cotton <- Fertilizer: 1.333333/min",
    ],
    "good": "Cotton",
    "island": "New Isle",
    "numBuildings": 2,
    "processTimeSeconds": 30,
    "producedPerMin": 4,
    "producedPerMinWithExtras": 5.333333,
  },
]
`;
